添加一层嵌套数组的数组和配置，添加对象数组配置

--- a/config.json
+++ b/config.json
@@ -3,6 +3,8 @@
         "head": 2,
         "src": "./excel/**/[^~$]*.xlsx",
         "dest": "./json",
-        "arraySeparator":","
+        "arraySeparator":"|",
+        "arrayArraySeparator":["|",";"],
+        "objectArraySeparator":[",",";"]
     }
 }
